# cchooks

./: .agent-sync.toml  .crush.json  .gitignore  AGENT_GUIDE.md  CLAUDE.md  CRUSH.md  LICENSE  Makefile  README.md  SYSTEM_MESSAGE_UPDATE_SUMMARY.md  pyproject.toml
.claude/: index.json  settings.json
.claude/agents/claude-code-hooks-mastery/: meta-agent.md
.claude/agents/zcf/common/: get-current-datetime.md  init-architect.md
.claude/commands/: meta-command.md  perplexity-question.md
.claude/commands/context/: create.md  update.md
.claude/commands/zcf/: init-project.md
.github/workflows/: build-check.yml  claude-code-review.yml  claude.yml  makefile.yml  publish-package.yml
.specify/memory/: constitution.md  constitution_update_checklist.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs/: README.md  api-reference.md  architecture.md  cli-guide.md  cli-reference.md  error_handling_guide.md  template-validator.md  todo.md  what-is-cc-hook.md
examples/: demo_context_hook.py  template_validation_example.py
logs/: pre_tool_use.json
scripts/: fetch_docs.sh
specs/001-add-cli-api/: CONTEXT_LOADER_IMPLEMENTATION.md  T006_COMPLETION_REPORT.md  T014_COMPLETION_REPORT.md  T020_COMPLETION_REPORT.md  T030_COMPLETION_REPORT.md  T032_IMPLEMENTATION_SUMMARY.md  T040_IMPLEMENTATION_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  template-development-guide.md
specs/001-add-cli-api/contracts/: cli_commands.yaml  settings_file_api.yaml
src/cchooks/: CLAUDE.md  __init__.py  exceptions.py  output_utils.py  types.py  utils.py
src/cchooks/api/: __init__.py  settings_operations.py
src/cchooks/cli/: CLAUDE.md  __init__.py  argument_parser.py  exceptions.py  main.py
src/cchooks/cli/commands/: __init__.py  add_hook.py  backup_manager.py  generate_hook.py  list_hooks.py  list_templates.py  register_template.py  remove_hook.py  unregister_template.py  update_hook.py  validate_hooks.py
src/cchooks/contexts/: __init__.py  base.py  notification.py  post_tool_use.py  pre_compact.py  pre_tool_use.py  session_end.py  session_start.py  stop.py  subagent_stop.py  user_prompt_submit.py
src/cchooks/models/: __init__.py  hook_config.py  settings_file.py  validation.py
src/cchooks/services/: __init__.py  hook_validator.py  script_generator.py  settings_manager.py
src/cchooks/settings/: __init__.py  discovery.py  exceptions.py
src/cchooks/templates/: CLAUDE.md  __init__.py  base_template.py  file_template_loader.py  registry.py  validator.py
src/cchooks/templates/builtin/: __init__.py  auto_formatter.py  auto_linter.py  cleanup_handler.py  context_loader.py  desktop_notifier.py  git_auto_commit.py  permission_logger.py  prompt_filter.py  security_guard.py  task_manager.py
src/cchooks/types/: __init__.py  enums.py
src/cchooks/utils/: __init__.py  backup.py  error_handler.py  file_operations.py  formatters.py  json_handler.py  json_utils.py  logging.py  permissions.py  recovery.py
tests/: CLAUDE.md  conftest.py  test_context_creation.py  test_exceptions.py  test_permissions.py  test_types.py  test_utils.py
tests/cli/: __init__.py
tests/contexts/: test_notification.py  test_post_tool_use.py  test_pre_compact.py  test_pre_tool_use.py  test_session_end.py  test_session_start.py  test_stop.py  test_subagent_stop.py  test_user_prompt_submit.py
tests/contract/: __init__.py  test_cli_commands.py  test_cli_commands_isolated.py  test_cli_commands_minimal.py  test_settings_api.py
tests/fixtures/: sample_data.py
tests/integration/: test_error_handling.py  test_file_discovery.py  test_real_world.py  test_user_prompt_submit_scenarios.py
tests/scenarios/: __init__.py
tests/unit/: __init__.py  test_hook_validation.py  test_json_formatting.py  test_json_formatting_isolated.py  test_settings_basic.py  test_settings_operations.py
